--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.7.2
+Brotli==1.1.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
 coreapi==2.3.3
@@ -19,3 +20,4 @@ typing_extensions==4.11.0
 tzdata==2024.1
 uritemplate==4.1.1
 urllib3==2.2.1
+whitenoise==6.6.0
